# embyBot

./: .env.example  .gitignore  Dockerfile  app.py  config.py  pyproject.toml  readme.md  requirements.txt  ruff.toml
.github/workflows/: commit-check.yml  pylint_check.yml
bot/: __init__.py  admin_command.py  bot_client.py  command_router.py  commands.py  event_command.py  filters.py  message_helper.py  user_command.py  utils.py
bot/command/: __init__.py  admin_command.py  event_command.py  user_command.py
bot/utils/: __init__.py  filters.py  message_helper.py
core/: emby_api.py
models/: __init__.py  base.py  config_model.py  invite_code_model.py  user_model.py
services/: __init__.py  config_service.py  emby_api.py  invite_code_service.py  user_router.py  user_service.py
