[project]
name = "embybot"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "asyncmy>=0.2.10",
    "cryptography>=44.0.0",
    "huidevkit[db-orm]~=0.6.0",
    "pymysql==1.1.1",
    "pyrogram",
    "python-dotenv==1.0.1",
    "pytz~=2025.1",
    "requests==2.31.0",
    "shortuuid~=1.0.13",
    "sqlalchemy~=2.0.20",
    "tgcrypto==1.2.5",
    "urllib3==2.3.0",
]

[tool.uv.sources]
pyrogram = { git = "https://github.com/rebeeh/pyrogram.git", rev = "master" }
